# dated.py

./: README.md  dated.py  pyproject.toml
.github/workflows/: test.yml
test/: test_copy_dated.py  test_filename_parts.py  test_filename_style.py  test_make_dated.py  test_new_filenames.py  test_qa.py  test_starts_with.py  test_with_current_date.py
