[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dated"
version = "0.1.0"
# dependencies = []
requires-python = "~= 3.10"
authors = [
  {name = "Max Kapur", email = "git@maxkapur.com"},
]
maintainers = [
  {name = "Max Kapur", email = "git@maxkapur.com"},
]
# description = ""
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/maxkapur/dated.py"
Documentation = "https://github.com/maxkapur/dated.py"
Repository = "https://github.com/maxkapur/dated.py.git"
"Bug Tracker" = "https://github.com/maxkapur/dated.py/issues"

[project.scripts]
dated = "dated:main"

[[tool.mypy.overrides]]
module = "dated"

[tool.ruff.lint]
extend-select = ["I"]
